Libraries updated to 2022-06 release